# School

./: .gitignore  .gitmodules
displaytest/: CMakeLists.txt  dht.c  displaytest.c
final/: CMakeLists.txt  final.c
loadcell/: CMakeLists.txt  loadcell.c  ws2812.pio
loadcellfixed/: CMakeLists.txt  hx711.c  loadcellfixed.c
neopixels/: CMakeLists.txt  neopixels.c
rainbowservo/: CMakeLists.txt  rainbowservo.c
scrtrigger/: CMakeLists.txt  scrtrigger.c
sevenseg/: CMakeLists.txt  sevenseg.c  sevensegold.c
tempcontrol/: CMakeLists.txt  MAX6675.c  MAX6675.h  NewLCDLibrary.c  NewLCDLibrary.h  PIDCalc.c  PIDCalc.h  PIDpico.c  encoder.h  menu.c  menu.h  pwmPID.c  pwmPID.h  tempcontrol.c
tempdisplay/: dht.c  display.c  fixeddht.c
templights/: CMakeLists.txt  CMakeListsold.txt  displaytest.c  templights.c
testproject/: CMakeLists.txt  CMakeListsold.txt  pio.h  testproject.c  ws2812.pio.h
